[gd_scene load_steps=2 format=2]

[ext_resource path="res://scenes/board.gd" type="Script" id=1]

[node name="Board" type="Node2D"]
script = ExtResource( 1 )

[node name="Boids" type="Node" parent="."]

[node name="Control" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="GridContainer" type="GridContainer" parent="Control"]
margin_right = 40.0
margin_bottom = 40.0
columns = 3

[node name="LabelSeparation" type="Label" parent="Control/GridContainer"]
margin_top = 9.0
margin_right = 67.0
margin_bottom = 23.0
text = "Separation"

[node name="Separation" type="HSlider" parent="Control/GridContainer"]
margin_left = 71.0
margin_right = 271.0
margin_bottom = 32.0
rect_min_size = Vector2( 200, 32 )
step = 0.1
tick_count = 20
ticks_on_borders = true

[node name="ValueSeparation" type="Label" parent="Control/GridContainer"]
margin_left = 275.0
margin_top = 9.0
margin_right = 275.0
margin_bottom = 23.0

[node name="LabelAlignment" type="Label" parent="Control/GridContainer"]
margin_top = 45.0
margin_right = 67.0
margin_bottom = 59.0
text = "Alignment"

[node name="Alignment" type="HSlider" parent="Control/GridContainer"]
margin_left = 71.0
margin_top = 36.0
margin_right = 271.0
margin_bottom = 68.0
rect_min_size = Vector2( 200, 32 )
step = 0.1
tick_count = 20
ticks_on_borders = true

[node name="ValueAlignment" type="Label" parent="Control/GridContainer"]
margin_left = 275.0
margin_top = 45.0
margin_right = 275.0
margin_bottom = 59.0

[node name="LabelCohesion" type="Label" parent="Control/GridContainer"]
margin_top = 81.0
margin_right = 67.0
margin_bottom = 95.0
text = "Cohesion"

[node name="Cohesion" type="HSlider" parent="Control/GridContainer"]
margin_left = 71.0
margin_top = 72.0
margin_right = 271.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 32 )
step = 0.1
tick_count = 20
ticks_on_borders = true

[node name="ValueCohesion" type="Label" parent="Control/GridContainer"]
margin_left = 275.0
margin_top = 81.0
margin_right = 275.0
margin_bottom = 95.0
